--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,8 @@ authors = ["k0pernicus <antonin.carette@gmail.com>"]
 
 [dependencies]
 x86_64 = "0.3.1"
+vga = { path="../vga" }
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
