--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["k0pernicus <antonin.carette@gmail.com>"]
 x86_64 = "0.3.1"
 vga = { path="../vga" }
 intel_8259 = { git = "https://github.com/ar-OS/intel_8259", branch = "master" }
+spin = "0.4.6"
 
 [dependencies.lazy_static]
 version = "1.0"
