--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ authors = ["k0pernicus <antonin.carette@gmail.com>"]
 [dependencies]
 x86_64 = "0.7.1"
 vga = { path="../vga" }
-intel_8259 = { git = "https://github.com/ar-OS/intel_8259", branch = "master" }
+intel_8259 = { git = "https://github.com/ar-OS/intel_8259", tag = "v0.1.1" }
+keyboard = { git = "https://github.com/ar-OS/keyboard", tag = "v0.1.1" }
 spin = "0.4.6"
 
 [dependencies.lazy_static]
